--- a/templates/italian.html
+++ b/templates/italian.html
@@ -5,41 +5,148 @@
     Italian
 {% endblock Title %}
 
-
-
 {% block body %}
-    
 
-    {% set name = 'Waqas' %}
-    <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary" value="{{name}}" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="modalShow(this.value);" >
-        Launch demo modal
-    </button>
+    <div class="container-fluid mt-4 d-flex flex-row justify-content-evenly">
+
+
+        
+        
+
+
+
+        <!-- To show Data -->
+        <div class="container " style="width:70%">
+            <div id="checkbox_div" class="d-flex flex-row justify-content-center">
+                <label><input type="checkbox" value="hide" id="name_col" onchange="hide_show_table(this.id);">Nome</label> 
+                <label><input type="checkbox" value="hide" id="surname_col" onchange="hide_show_table(this.id);">Cognome</label> 
+                <label><input type="checkbox" value="hide" id="car_col" onchange="hide_show_table(this.id);">Strada</label> 
+                <label><input type="checkbox" value="hide" id="city_col" onchange="hide_show_table(this.id);">Citta</label> 
+                <label><input type="checkbox" value="hide" id="country_col" onchange="hide_show_table(this.id);">Pease</label> 
+            </div>
+
+            <table class="table" >
+                <thead>
+                  <tr>
+                        <th>No#</th>
+                        <th id="name_col_head">Nome</th>
+                        <th id="surname_col_head">Cognome</th>
+                        <th id="car_col_head">Strada</th>
+                        <th id="city_col_head">Citta</th>
+                        <th id="country_col_head">Pease</th>
+                        <th id="action">Action</th>
+                    
+                    
+                  </tr>
+                </thead>
+                <tbody>
+                  {% for eng in totalEng  %}
+                    <tr>
+                        <td>{{loop.index}}</td>
+                        <td class="name_col">{{eng.nome}}</td>
+                        <td class="surname_col">{{eng.cognome}}</td>
+                        <td class="car_col">{{eng.strada}}</td>
+                        <td class="city_col">{{eng.citta}}</td>
+                        <td class="country_col">{{eng.pease}}</td>
+                        <!-- <td class="country_col"><button class="btn-sm btn-primary" onclick="view();" id="myBtn">View</button></td> -->
+                        <td> <!-- Button trigger modal -->
+                            <button type="button" class="btn-sm btn-primary" value='{{eng}}' data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="ITmodalShow(this.value);" >
+                                View
+                            </button>
+                        </td>
+                    </tr>
+                    
+
+                  {% endfor %}
+
+                        
+                  
+                </tbody>
+            </table>
+
+             
+            
+        </div>
+
+
+        <!-- vertical Line -->
+        <div class="vl"></div>
+
+
+        <!-- To Insert New Data -->
+        <div class="container  mb-4" style="width:30%">
+            <h3>Add Data</h3>
+            <form method="POST" action="/italian" class="mb-4">
+                <div class="form-group">
+                    <label for="my-input">Nome</label>
+                    <input id="my-input" class="form-control" type="text" name="name">
+                </div>
+                <div class="form-group">
+                    <label for="my-input">Cognome</label>
+                    <input id="my-input" class="form-control" type="text" name="surname">
+                </div>
+                <div class="form-group">
+                    <label for="my-input">Marca</label>
+                    <input id="my-input" class="form-control" type="text" name="car_brand">
+                </div>
+                <div class="form-group">
+                    <label for="my-input">Modello</label>
+                    <input id="my-input" class="form-control" type="text" name="car_model">
+                </div>
+                <div class="form-group">
+                    <label for="my-input">Citta</label>
+                    <input id="my-input" class="form-control" type="text" name="city">
+                </div>
+                <div class="form-group">
+                    <label for="my-input">Pease</label>
+                    <input id="my-input" class="form-control" type="text" name="country">
+                </div>
+
+                <button type="submit" class="btn btn-primary mt-4">Submit</button>
+                
+            </form>
+        </div>
+        
+    </div>
+
+    
     
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <h5 class="modal-title" id="exampleModalLabel">This is Title </h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" id="mbody">
-                
+                <div id="city"></div>
+                <div id="country"></div>
+                <div><strong>Cars</strong></div>
+                <table class="table table-light " id="modal-table">
+                    <thead>
+                        <tr>
+                            <th>id</th>
+                            <th>Brand</th>
+                            <th>Model</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr></tr>
+                        
+                    </tbody>
+                </table>
             </div>
             <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+            <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
             </div>
         </div>
         </div>
     </div>
 
-    <script>
-        function modalShow(name){
-            console.log('ModalShow');
-            document.getElementById("mbody").innerHTML = name
-        }
-    </script>
-  
+    
+
+    
 {% endblock body %}
+  
